src/hoken/parser/HokenParser.java
// $ANTLR 3.5.2 src\\hoken\\parser\\Hoken.g 2014-07-07 23:29:18

package hoken.parser;
import hoken.HokenException;
import hoken.ast.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class HokenParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BOOLEAN", "CHAR", 
		"CHARACTER", "COMMA", "COMMENT", "COMPOUND", "CONST", "DIGIT", "DIVIDE", 
		"EQ", "EQUALS", "FALSE", "GT", "GTE", "ID", "INT", "INTEGER", "LCURLY", 
		"LETTER", "LPAREN", "LT", "LTE", "MINUS", "MODULO", "NEQ", "NOT", "OR", 
		"PLUS", "PROGRAM", "RCURLY", "READ", "RPAREN", "SEMICOLON", "TIMES", "TRUE", 
		"UNDERSCORE", "VAR", "WRITE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BOOLEAN=6;
	public static final int CHAR=7;
	public static final int CHARACTER=8;
	public static final int COMMA=9;
	public static final int COMMENT=10;
	public static final int COMPOUND=11;
	public static final int CONST=12;
	public static final int DIGIT=13;
	public static final int DIVIDE=14;
	public static final int EQ=15;
	public static final int EQUALS=16;
	public static final int FALSE=17;
	public static final int GT=18;
	public static final int GTE=19;
	public static final int ID=20;
	public static final int INT=21;
	public static final int INTEGER=22;
	public static final int LCURLY=23;
	public static final int LETTER=24;
	public static final int LPAREN=25;
	public static final int LT=26;
	public static final int LTE=27;
	public static final int MINUS=28;
	public static final int MODULO=29;
	public static final int NEQ=30;
	public static final int NOT=31;
	public static final int OR=32;
	public static final int PLUS=33;
	public static final int PROGRAM=34;
	public static final int RCURLY=35;
	public static final int READ=36;
	public static final int RPAREN=37;
	public static final int SEMICOLON=38;
	public static final int TIMES=39;
	public static final int TRUE=40;
	public static final int UNDERSCORE=41;
	public static final int VAR=42;
	public static final int WRITE=43;
	public static final int WS=44;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public HokenParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public HokenParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return HokenParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src\\hoken\\parser\\Hoken.g"; }


	private int errors = 0;

	public int getErrorCount() {
	    return this.errors;
	}

	public void displayRecognitionError(String[] tokenNames, RecognitionException e)
	{
	    this.errors++;
	    emitErrorMessage("'" + e.token.getText() + "' (regel: " + e.line + ", kolom: " + e.charPositionInLine + ") " + getErrorMessage(e, tokenNames));
	}


	public static class program_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "program"
	// src\\hoken\\parser\\Hoken.g:83:1: program : statements EOF -> ^( PROGRAM statements ) ;
	public final HokenParser.program_return program() throws RecognitionException {
		HokenParser.program_return retval = new HokenParser.program_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope statements1 =null;

		HokenNode EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");

		try {
			// src\\hoken\\parser\\Hoken.g:84:5: ( statements EOF -> ^( PROGRAM statements ) )
			// src\\hoken\\parser\\Hoken.g:84:9: statements EOF
			{
			pushFollow(FOLLOW_statements_in_program479);
			statements1=statements();
			state._fsp--;

			stream_statements.add(statements1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program481);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: statements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (HokenNode)adaptor.nil();
			// 85:9: -> ^( PROGRAM statements )
			{
				// src\\hoken\\parser\\Hoken.g:85:12: ^( PROGRAM statements )
				{
				HokenNode root_1 = (HokenNode)adaptor.nil();
				root_1 = (HokenNode)adaptor.becomeRoot((HokenNode)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_statements.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class statements_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "statements"
	// src\\hoken\\parser\\Hoken.g:88:1: statements : ( statement SEMICOLON !)* ;
	public final HokenParser.statements_return statements() throws RecognitionException {
		HokenParser.statements_return retval = new HokenParser.statements_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token SEMICOLON4=null;
		ParserRuleReturnScope statement3 =null;

		HokenNode SEMICOLON4_tree=null;

		try {
			// src\\hoken\\parser\\Hoken.g:89:5: ( ( statement SEMICOLON !)* )
			// src\\hoken\\parser\\Hoken.g:89:9: ( statement SEMICOLON !)*
			{
			root_0 = (HokenNode)adaptor.nil();


			// src\\hoken\\parser\\Hoken.g:89:9: ( statement SEMICOLON !)*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BOOLEAN && LA1_0 <= CHARACTER)||LA1_0==CONST||LA1_0==FALSE||(LA1_0 >= ID && LA1_0 <= LCURLY)||LA1_0==LPAREN||LA1_0==MINUS||LA1_0==NOT||LA1_0==PLUS||LA1_0==READ||LA1_0==TRUE||LA1_0==WRITE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// src\\hoken\\parser\\Hoken.g:89:10: statement SEMICOLON !
					{
					pushFollow(FOLLOW_statement_in_statements517);
					statement3=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement3.getTree());

					SEMICOLON4=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statements519); 
					}
					break;

				default :
					break loop1;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statements"


	public static class statement_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// src\\hoken\\parser\\Hoken.g:92:1: statement : ( decl | expr );
	public final HokenParser.statement_return statement() throws RecognitionException {
		HokenParser.statement_return retval = new HokenParser.statement_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		ParserRuleReturnScope decl5 =null;
		ParserRuleReturnScope expr6 =null;


		try {
			// src\\hoken\\parser\\Hoken.g:93:5: ( decl | expr )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==BOOLEAN||LA2_0==CHARACTER||LA2_0==CONST||LA2_0==INTEGER) ) {
				alt2=1;
			}
			else if ( (LA2_0==CHAR||LA2_0==FALSE||(LA2_0 >= ID && LA2_0 <= INT)||LA2_0==LCURLY||LA2_0==LPAREN||LA2_0==MINUS||LA2_0==NOT||LA2_0==PLUS||LA2_0==READ||LA2_0==TRUE||LA2_0==WRITE) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// src\\hoken\\parser\\Hoken.g:93:9: decl
					{
					root_0 = (HokenNode)adaptor.nil();


					pushFollow(FOLLOW_decl_in_statement541);
					decl5=decl();
					state._fsp--;

					adaptor.addChild(root_0, decl5.getTree());

					}
					break;
				case 2 :
					// src\\hoken\\parser\\Hoken.g:94:9: expr
					{
					root_0 = (HokenNode)adaptor.nil();


					pushFollow(FOLLOW_expr_in_statement551);
					expr6=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class decl_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// src\\hoken\\parser\\Hoken.g:97:1: decl : ( type id_list -> ^( VAR type id_list ) | CONST ^ type id_list EQUALS ! value );
	public final HokenParser.decl_return decl() throws RecognitionException {
		HokenParser.decl_return retval = new HokenParser.decl_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token CONST9=null;
		Token EQUALS12=null;
		ParserRuleReturnScope type7 =null;
		ParserRuleReturnScope id_list8 =null;
		ParserRuleReturnScope type10 =null;
		ParserRuleReturnScope id_list11 =null;
		ParserRuleReturnScope value13 =null;

		HokenNode CONST9_tree=null;
		HokenNode EQUALS12_tree=null;
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		RewriteRuleSubtreeStream stream_id_list=new RewriteRuleSubtreeStream(adaptor,"rule id_list");

		try {
			// src\\hoken\\parser\\Hoken.g:97:5: ( type id_list -> ^( VAR type id_list ) | CONST ^ type id_list EQUALS ! value )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==BOOLEAN||LA3_0==CHARACTER||LA3_0==INTEGER) ) {
				alt3=1;
			}
			else if ( (LA3_0==CONST) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// src\\hoken\\parser\\Hoken.g:97:9: type id_list
					{
					pushFollow(FOLLOW_type_in_decl565);
					type7=type();
					state._fsp--;

					stream_type.add(type7.getTree());
					pushFollow(FOLLOW_id_list_in_decl567);
					id_list8=id_list();
					state._fsp--;

					stream_id_list.add(id_list8.getTree());
					// AST REWRITE
					// elements: id_list, type
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (HokenNode)adaptor.nil();
					// 98:9: -> ^( VAR type id_list )
					{
						// src\\hoken\\parser\\Hoken.g:98:12: ^( VAR type id_list )
						{
						HokenNode root_1 = (HokenNode)adaptor.nil();
						root_1 = (HokenNode)adaptor.becomeRoot(new DeclarationNode(VAR), root_1);
						adaptor.addChild(root_1, stream_type.nextTree());
						adaptor.addChild(root_1, stream_id_list.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// src\\hoken\\parser\\Hoken.g:99:9: CONST ^ type id_list EQUALS ! value
					{
					root_0 = (HokenNode)adaptor.nil();


					CONST9=(Token)match(input,CONST,FOLLOW_CONST_in_decl598); 
					CONST9_tree = new DeclarationNode(CONST9) ;
					root_0 = (HokenNode)adaptor.becomeRoot(CONST9_tree, root_0);

					pushFollow(FOLLOW_type_in_decl604);
					type10=type();
					state._fsp--;

					adaptor.addChild(root_0, type10.getTree());

					pushFollow(FOLLOW_id_list_in_decl606);
					id_list11=id_list();
					state._fsp--;

					adaptor.addChild(root_0, id_list11.getTree());

					EQUALS12=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_decl608); 
					pushFollow(FOLLOW_value_in_decl611);
					value13=value();
					state._fsp--;

					adaptor.addChild(root_0, value13.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class read_stat_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "read_stat"
	// src\\hoken\\parser\\Hoken.g:102:1: read_stat : READ ^ LPAREN ! id_list RPAREN !;
	public final HokenParser.read_stat_return read_stat() throws RecognitionException {
		HokenParser.read_stat_return retval = new HokenParser.read_stat_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token READ14=null;
		Token LPAREN15=null;
		Token RPAREN17=null;
		ParserRuleReturnScope id_list16 =null;

		HokenNode READ14_tree=null;
		HokenNode LPAREN15_tree=null;
		HokenNode RPAREN17_tree=null;

		try {
			// src\\hoken\\parser\\Hoken.g:103:5: ( READ ^ LPAREN ! id_list RPAREN !)
			// src\\hoken\\parser\\Hoken.g:103:9: READ ^ LPAREN ! id_list RPAREN !
			{
			root_0 = (HokenNode)adaptor.nil();


			READ14=(Token)match(input,READ,FOLLOW_READ_in_read_stat630); 
			READ14_tree = (HokenNode)adaptor.create(READ14);
			root_0 = (HokenNode)adaptor.becomeRoot(READ14_tree, root_0);

			LPAREN15=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_read_stat633); 
			pushFollow(FOLLOW_id_list_in_read_stat636);
			id_list16=id_list();
			state._fsp--;

			adaptor.addChild(root_0, id_list16.getTree());

			RPAREN17=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_read_stat638); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "read_stat"


	public static class write_stat_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "write_stat"
	// src\\hoken\\parser\\Hoken.g:106:1: write_stat : WRITE ^ LPAREN ! expr_list RPAREN !;
	public final HokenParser.write_stat_return write_stat() throws RecognitionException {
		HokenParser.write_stat_return retval = new HokenParser.write_stat_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token WRITE18=null;
		Token LPAREN19=null;
		Token RPAREN21=null;
		ParserRuleReturnScope expr_list20 =null;

		HokenNode WRITE18_tree=null;
		HokenNode LPAREN19_tree=null;
		HokenNode RPAREN21_tree=null;

		try {
			// src\\hoken\\parser\\Hoken.g:107:5: ( WRITE ^ LPAREN ! expr_list RPAREN !)
			// src\\hoken\\parser\\Hoken.g:107:9: WRITE ^ LPAREN ! expr_list RPAREN !
			{
			root_0 = (HokenNode)adaptor.nil();


			WRITE18=(Token)match(input,WRITE,FOLLOW_WRITE_in_write_stat658); 
			WRITE18_tree = (HokenNode)adaptor.create(WRITE18);
			root_0 = (HokenNode)adaptor.becomeRoot(WRITE18_tree, root_0);

			LPAREN19=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_write_stat661); 
			pushFollow(FOLLOW_expr_list_in_write_stat664);
			expr_list20=expr_list();
			state._fsp--;

			adaptor.addChild(root_0, expr_list20.getTree());

			RPAREN21=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_write_stat666); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "write_stat"


	public static class compound_stat_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "compound_stat"
	// src\\hoken\\parser\\Hoken.g:110:1: compound_stat : LCURLY statements RCURLY -> ^( COMPOUND statements ) ;
	public final HokenParser.compound_stat_return compound_stat() throws RecognitionException {
		HokenParser.compound_stat_return retval = new HokenParser.compound_stat_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token LCURLY22=null;
		Token RCURLY24=null;
		ParserRuleReturnScope statements23 =null;

		HokenNode LCURLY22_tree=null;
		HokenNode RCURLY24_tree=null;
		RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
		RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");

		try {
			// src\\hoken\\parser\\Hoken.g:111:5: ( LCURLY statements RCURLY -> ^( COMPOUND statements ) )
			// src\\hoken\\parser\\Hoken.g:111:9: LCURLY statements RCURLY
			{
			LCURLY22=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_compound_stat686);  
			stream_LCURLY.add(LCURLY22);

			pushFollow(FOLLOW_statements_in_compound_stat688);
			statements23=statements();
			state._fsp--;

			stream_statements.add(statements23.getTree());
			RCURLY24=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_compound_stat690);  
			stream_RCURLY.add(RCURLY24);

			// AST REWRITE
			// elements: statements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (HokenNode)adaptor.nil();
			// 112:9: -> ^( COMPOUND statements )
			{
				// src\\hoken\\parser\\Hoken.g:112:12: ^( COMPOUND statements )
				{
				HokenNode root_1 = (HokenNode)adaptor.nil();
				root_1 = (HokenNode)adaptor.becomeRoot((HokenNode)adaptor.create(COMPOUND, "COMPOUND"), root_1);
				adaptor.addChild(root_1, stream_statements.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "compound_stat"


	public static class expr_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// src\\hoken\\parser\\Hoken.g:115:1: expr : assignment_expr ;
	public final HokenParser.expr_return expr() throws RecognitionException {
		HokenParser.expr_return retval = new HokenParser.expr_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		ParserRuleReturnScope assignment_expr25 =null;


		try {
			// src\\hoken\\parser\\Hoken.g:115:5: ( assignment_expr )
			// src\\hoken\\parser\\Hoken.g:115:9: assignment_expr
			{
			root_0 = (HokenNode)adaptor.nil();


			pushFollow(FOLLOW_assignment_expr_in_expr720);
			assignment_expr25=assignment_expr();
			state._fsp--;

			adaptor.addChild(root_0, assignment_expr25.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class assignment_expr_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "assignment_expr"
	// src\\hoken\\parser\\Hoken.g:118:1: assignment_expr : logical_or_expr ( ASSIGN ^ expr )? ;
	public final HokenParser.assignment_expr_return assignment_expr() throws RecognitionException {
		HokenParser.assignment_expr_return retval = new HokenParser.assignment_expr_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token ASSIGN27=null;
		ParserRuleReturnScope logical_or_expr26 =null;
		ParserRuleReturnScope expr28 =null;

		HokenNode ASSIGN27_tree=null;

		try {
			// src\\hoken\\parser\\Hoken.g:119:5: ( logical_or_expr ( ASSIGN ^ expr )? )
			// src\\hoken\\parser\\Hoken.g:119:9: logical_or_expr ( ASSIGN ^ expr )?
			{
			root_0 = (HokenNode)adaptor.nil();


			pushFollow(FOLLOW_logical_or_expr_in_assignment_expr739);
			logical_or_expr26=logical_or_expr();
			state._fsp--;

			adaptor.addChild(root_0, logical_or_expr26.getTree());

			// src\\hoken\\parser\\Hoken.g:119:25: ( ASSIGN ^ expr )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ASSIGN) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// src\\hoken\\parser\\Hoken.g:119:26: ASSIGN ^ expr
					{
					ASSIGN27=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment_expr742); 
					ASSIGN27_tree = (HokenNode)adaptor.create(ASSIGN27);
					root_0 = (HokenNode)adaptor.becomeRoot(ASSIGN27_tree, root_0);

					pushFollow(FOLLOW_expr_in_assignment_expr745);
					expr28=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr28.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (HokenNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (HokenNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment_expr"


	public static class logical_or_expr_return extends ParserRuleReturnScope {
		HokenNode tree;
		@Override
		public HokenNode getTree() { return tree; }
	};


	// $ANTLR start "logical_or_expr"
	// src\\hoken\\parser\\Hoken.g:122:1: logical_or_expr : logical_and_expr ( OR ^ logical_and_expr )* ;
	public final HokenParser.logical_or_expr_return logical_or_expr() throws RecognitionException {
		HokenParser.logical_or_expr_return retval = new HokenParser.logical_or_expr_return();
		retval.start = input.LT(1);

		HokenNode root_0 = null;

		Token OR30=null;
		ParserRuleReturnScope logical_and_expr29 =null;
		ParserRuleReturnScope logical_and_expr31 =null;

		HokenNode OR30_tree=null;

		try {
			// src\\hoken\\parser\\Hoken.g:123:5: ( logical_and_expr ( OR ^ logical_and_expr )* )
			// src\\hoken\\parser\\Hoken.g:123:9: logical_and_expr ( OR ^ logical_and_expr )*
			{
			root_0 = (HokenNode)adaptor.nil();


			pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr766);
			logical_and_expr29=logical_and_expr();
			state._fsp--;

			adaptor.addChild(root_0, logical_and_expr29.getTree());

			// src\\hoken\\parser\\Hoken.g:123:26: ( OR ^ logical_and_expr )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==OR) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// src\\hoken\\parser\\Hoken.g:123:27: OR ^ logical_and_expr
					{
					OR30=(Token)match(input,OR,FOLLOW_OR_in_logical_or_expr769); 
					OR30_tree = new ExpressionNode(OR30) ;
					root_0 = (HokenNode)adaptor.becomeRoot(OR30_tree, root_0);

					pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr775);
					logical_and_expr31=logical_and_expr();
					state._fsp--;

					adaptor.addChild(root_0, logical_and_expr31.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}
